# simpler-army-builder

./: .coverage  .gitignore  README.md  TODO.md  app.py  army.json  army.py  army_ui.py  classes_for_later.py  config.py  coverage.xml  main.py  new_army.py  planned_flow.mmd  preview.py  prompt_utils.py  pyproject.toml  regiment.py  regiment_table.html  regiment_ui.py  settings  shared.py  sonar-project.properties  test_army.json  test_army.py  test_regiment.py  test_unit.py  test_warscroll.py  ui.py  unit.py  unit_ui.py  warscroll.py  warscroll_ui.py  warscrolls.json
.cache/coverage/: coverage.db
.github/workflows/: main.yml
.zed/: debug.json
data/: army.json  test_army.json  warscroll.json
infrastructure/: army.py  main.py  regiment.py  unit.py  warscroll.py
tests/: test_army.py  test_regiment.py  test_unit.py  test_warscroll.py
ui/: app.py  army_ui.py  exit_menu.py  main_menu.py  regiment_ui.py  screen.py  unit_ui.py  warscroll_preview_ui.py  warscroll_ui.py
